done with the header section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,28 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <div class="searchBar">
+            <img src="./icons/magnify.svg" alt="searchBar icon.Magnify" id="searchIcon" class="icons">
+            <input type="search" name="searchBarInput" id="searchBarInput">
+        </div>
+        <div class="userProfile">
+            <img src="./icons/bell-ring-outline.svg" alt="Notifications Bell Icon" class="icons bellIcon">
+            <img src="./icons/pfp.png" alt="user profile pfp" class="userImage">
+            <h2 id="userName">Morgan Oakley</h2>
+        </div>
+        <div class="mediaBox">
+            <img src="./icons/pfp.png" alt="pfp" class="userImage">
+            <div class="profileName">
+                <p>Hi there,</p>
+                <h2>Morgan Oakley (@morgan)</h2>
+            </div>
+        </div>
+        <div class="headerButtons">
+            <button class="button">New</button>
+            <button class="button">Upload</button>
+            <button class="button">Share</button>
+        </div>
+    </header>
 </body>
 </html>
