Edited Grid Layout

--- a/index.html
+++ b/index.html
@@ -34,5 +34,113 @@
             <button class="button">Share</button>
         </div>
     </header>
+    <aside class="sideBar">
+        <div class="dashboardLogo menuItemsGridZero">
+            <img src="./icons/view-dashboard.svg" alt="Dashboard" class="icons">
+            <h2>Dashboard</h2>
+        </div>
+        <div class="menuItemsGridOne">
+            <div class="menuItems">
+                <img src="./icons/home.svg" alt="" class="icons">
+                <a>Home</a>
+            </div>
+            <div class="menuItems">
+                <img src="./icons/card-account-details-outline.svg" alt="" class="icons">
+                <a>Profile</a>
+            </div>
+            <div class="menuItems">
+                <img src="./icons/message.svg" alt="" class="icons">
+                <a>Messages</a>
+            </div>
+            <div class="menuItems">
+                <img src="./icons/clock-time-three.svg" alt="" class="icons">
+                <a>History</a>
+            </div>
+            <div class="menuItems">
+                <img src="./icons/file.svg" alt="" class="icons">
+                <a>Tasks</a>
+            </div>
+            <div class="menuItems">
+                <img src="./icons/account-group.svg" alt="" class="icons">
+                <a>Communities</a>
+            </div>
+        </div>
+        <div class="menuItemsGridTwo">
+            <div class="menuItems">
+                <img src="./icons/cog.svg" alt="" class="icons">
+                <a>Settings</a>
+            </div>
+            <div class="menuItems">
+                <img src="./icons/help-box.svg" alt="" class="icons">
+                <a>Support</a>
+            </div>
+            <div class="menuItems">
+                <img src="./icons/shield-check.svg" alt="" class="icons">
+                <a>Privacy</a>
+            </div>
+        </div>
+    </aside>
+    <section class="articleSection">
+        <article class="article">
+            <h3>Super Cool Project</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis, in voluptas ipsam rem nobis odio nam tempora obcaecati aut sunt incidunt nisi praesentium eaque porro autem accusantium dolor sit cumque.</p>
+            <img src="./icons/star-plus-outline.svg" alt="star" class="icons">
+            <img src="./icons/eye-plus-outline.svg" alt="viewed" class="icons">
+            <img src="./icons/open-in-new.svg" alt="open in new" class="icons">
+        </article>
+        <article class="article">
+            <h3>Super Cool Project</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis, in voluptas ipsam rem nobis odio nam tempora obcaecati aut sunt incidunt nisi praesentium eaque porro autem accusantium dolor sit cumque.</p>
+            <img src="./icons/star-plus-outline.svg" alt="star" class="icons">
+            <img src="./icons/eye-plus-outline.svg" alt="viewed" class="icons">
+            <img src="./icons/open-in-new.svg" alt="open in new" class="icons">
+        </article>
+        <article class="article">
+            <h3>Super Cool Project</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis, in voluptas ipsam rem nobis odio nam tempora obcaecati aut sunt incidunt nisi praesentium eaque porro autem accusantium dolor sit cumque.</p>
+            <img src="./icons/star-plus-outline.svg" alt="star" class="icons">
+            <img src="./icons/eye-plus-outline.svg" alt="viewed" class="icons">
+            <img src="./icons/open-in-new.svg" alt="open in new" class="icons">
+        </article>
+        <article class="article">
+            <h3>Super Cool Project</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis, in voluptas ipsam rem nobis odio nam tempora obcaecati aut sunt incidunt nisi praesentium eaque porro autem accusantium dolor sit cumque.</p>
+            <img src="./icons/star-plus-outline.svg" alt="star" class="icons">
+            <img src="./icons/eye-plus-outline.svg" alt="viewed" class="icons">
+            <img src="./icons/open-in-new.svg" alt="open in new" class="icons">
+        </article>
+        <article class="article">
+            <h3>Super Cool Project</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis, in voluptas ipsam rem nobis odio nam tempora obcaecati aut sunt incidunt nisi praesentium eaque porro autem accusantium dolor sit cumque.</p>
+            <img src="./icons/star-plus-outline.svg" alt="star" class="icons">
+            <img src="./icons/eye-plus-outline.svg" alt="viewed" class="icons">
+            <img src="./icons/open-in-new.svg" alt="open in new" class="icons">
+        </article>
+        <article class="article">
+            <h3>Super Cool Project</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis, in voluptas ipsam rem nobis odio nam tempora obcaecati aut sunt incidunt nisi praesentium eaque porro autem accusantium dolor sit cumque.</p>
+            <img src="./icons/star-plus-outline.svg" alt="star" class="icons">
+            <img src="./icons/eye-plus-outline.svg" alt="viewed" class="icons">
+            <img src="./icons/open-in-new.svg" alt="open in new" class="icons">
+        </article>
+    </section>
+    <div>
+        <article>
+            <h3>TEST</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis, in voluptas ipsam rem nobis odio nam tempora obcaecati aut sunt incidunt nisi praesentium eaque porro autem accusantium dolor sit cumque.</p>
+            <img src="./icons/star-plus-outline.svg" alt="star" class="icons">
+            <img src="./icons/eye-plus-outline.svg" alt="viewed" class="icons">
+            <img src="./icons/open-in-new.svg" alt="open in new" class="icons">
+        </article>
+    </div>
+    <div>
+        <article>
+            <h3>TEST</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis, in voluptas ipsam rem nobis odio nam tempora obcaecati aut sunt incidunt nisi praesentium eaque porro autem accusantium dolor sit cumque.</p>
+            <img src="./icons/star-plus-outline.svg" alt="star" class="icons">
+            <img src="./icons/eye-plus-outline.svg" alt="viewed" class="icons">
+            <img src="./icons/open-in-new.svg" alt="open in new" class="icons">
+        </article>
+    </div>
 </body>
 </html>
