--- a/index.html
+++ b/index.html
@@ -81,66 +81,125 @@
         </div>
     </aside>
     <section class="articleSection">
-        <article class="article">
-            <h3>Super Cool Project</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis, in voluptas ipsam rem nobis odio nam tempora obcaecati aut sunt incidunt nisi praesentium eaque porro autem accusantium dolor sit cumque.</p>
-            <img src="./icons/star-plus-outline.svg" alt="star" class="icons">
-            <img src="./icons/eye-plus-outline.svg" alt="viewed" class="icons">
-            <img src="./icons/open-in-new.svg" alt="open in new" class="icons">
-        </article>
-        <article class="article">
-            <h3>Super Cool Project</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis, in voluptas ipsam rem nobis odio nam tempora obcaecati aut sunt incidunt nisi praesentium eaque porro autem accusantium dolor sit cumque.</p>
-            <img src="./icons/star-plus-outline.svg" alt="star" class="icons">
-            <img src="./icons/eye-plus-outline.svg" alt="viewed" class="icons">
-            <img src="./icons/open-in-new.svg" alt="open in new" class="icons">
-        </article>
-        <article class="article">
-            <h3>Super Cool Project</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis, in voluptas ipsam rem nobis odio nam tempora obcaecati aut sunt incidunt nisi praesentium eaque porro autem accusantium dolor sit cumque.</p>
-            <img src="./icons/star-plus-outline.svg" alt="star" class="icons">
-            <img src="./icons/eye-plus-outline.svg" alt="viewed" class="icons">
-            <img src="./icons/open-in-new.svg" alt="open in new" class="icons">
-        </article>
-        <article class="article">
-            <h3>Super Cool Project</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis, in voluptas ipsam rem nobis odio nam tempora obcaecati aut sunt incidunt nisi praesentium eaque porro autem accusantium dolor sit cumque.</p>
-            <img src="./icons/star-plus-outline.svg" alt="star" class="icons">
-            <img src="./icons/eye-plus-outline.svg" alt="viewed" class="icons">
-            <img src="./icons/open-in-new.svg" alt="open in new" class="icons">
-        </article>
-        <article class="article">
-            <h3>Super Cool Project</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis, in voluptas ipsam rem nobis odio nam tempora obcaecati aut sunt incidunt nisi praesentium eaque porro autem accusantium dolor sit cumque.</p>
-            <img src="./icons/star-plus-outline.svg" alt="star" class="icons">
-            <img src="./icons/eye-plus-outline.svg" alt="viewed" class="icons">
-            <img src="./icons/open-in-new.svg" alt="open in new" class="icons">
-        </article>
-        <article class="article">
-            <h3>Super Cool Project</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis, in voluptas ipsam rem nobis odio nam tempora obcaecati aut sunt incidunt nisi praesentium eaque porro autem accusantium dolor sit cumque.</p>
-            <img src="./icons/star-plus-outline.svg" alt="star" class="icons">
-            <img src="./icons/eye-plus-outline.svg" alt="viewed" class="icons">
-            <img src="./icons/open-in-new.svg" alt="open in new" class="icons">
-        </article>
+        <h3>Your Projects</h3>
+        <div class="articlesContainer">
+            <article class="article">
+                <div class="articleContent">
+                    <h3>Super Cool Project</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis, in voluptas ipsam rem nobis odio nam tempora obcaecati aut sunt incidunt nisi praesentium eaque porro autem accusantium dolor sit cumque.</p>
+                </div>
+                <div class="articleIcons">
+                    <img src="./icons/star-plus-outline.svg" alt="star" class="icons">
+                    <img src="./icons/eye-plus-outline.svg" alt="viewed" class="icons">
+                    <img src="./icons/open-in-new.svg" alt="open in new" class="icons">
+                </div>
+            </article>
+            <article class="article">
+                <div class="articleContent">
+                    <h3>Super Cool Project</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis, in voluptas ipsam rem nobis odio nam tempora obcaecati aut sunt incidunt nisi praesentium eaque porro autem accusantium dolor sit cumque.</p>
+                </div>
+                <div class="articleIcons">
+                    <img src="./icons/star-plus-outline.svg" alt="star" class="icons">
+                    <img src="./icons/eye-plus-outline.svg" alt="viewed" class="icons">
+                    <img src="./icons/open-in-new.svg" alt="open in new" class="icons">
+                </div>
+            </article>
+            <article class="article">
+                <div class="articleContent">
+                    <h3>Super Cool Project</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis, in voluptas ipsam rem nobis odio nam tempora obcaecati aut sunt incidunt nisi praesentium eaque porro autem accusantium dolor sit cumque.</p>
+                </div>
+                <div class="articleIcons">
+                    <img src="./icons/star-plus-outline.svg" alt="star" class="icons">
+                    <img src="./icons/eye-plus-outline.svg" alt="viewed" class="icons">
+                    <img src="./icons/open-in-new.svg" alt="open in new" class="icons">
+                </div>
+            </article>
+            <article class="article">
+                <div class="articleContent">
+                    <h3>Super Cool Project</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis, in voluptas ipsam rem nobis odio nam tempora obcaecati aut sunt incidunt nisi praesentium eaque porro autem accusantium dolor sit cumque.</p>
+                </div>
+                <div class="articleIcons">
+                    <img src="./icons/star-plus-outline.svg" alt="star" class="icons">
+                    <img src="./icons/eye-plus-outline.svg" alt="viewed" class="icons">
+                    <img src="./icons/open-in-new.svg" alt="open in new" class="icons">
+                </div>
+            </article>
+            <article class="article">
+                <div class="articleContent">
+                    <h3>Super Cool Project</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis, in voluptas ipsam rem nobis odio nam tempora obcaecati aut sunt incidunt nisi praesentium eaque porro autem accusantium dolor sit cumque.</p>
+                </div>
+                <div class="articleIcons">
+                    <img src="./icons/star-plus-outline.svg" alt="star" class="icons">
+                    <img src="./icons/eye-plus-outline.svg" alt="viewed" class="icons">
+                    <img src="./icons/open-in-new.svg" alt="open in new" class="icons">
+                </div>
+            </article>
+            <article class="article">
+                <div class="articleContent">
+                    <h3>Super Cool Project</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis, in voluptas ipsam rem nobis odio nam tempora obcaecati aut sunt incidunt nisi praesentium eaque porro autem accusantium dolor sit cumque.</p>
+                </div>
+                <div class="articleIcons">
+                    <img src="./icons/star-plus-outline.svg" alt="star" class="icons">
+                    <img src="./icons/eye-plus-outline.svg" alt="viewed" class="icons">
+                    <img src="./icons/open-in-new.svg" alt="open in new" class="icons">
+                </div>
+            </article>
+        </div class="articlesContainer">
     </section>
-    <div>
-        <article>
-            <h3>TEST</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis, in voluptas ipsam rem nobis odio nam tempora obcaecati aut sunt incidunt nisi praesentium eaque porro autem accusantium dolor sit cumque.</p>
-            <img src="./icons/star-plus-outline.svg" alt="star" class="icons">
-            <img src="./icons/eye-plus-outline.svg" alt="viewed" class="icons">
-            <img src="./icons/open-in-new.svg" alt="open in new" class="icons">
-        </article>
+    <div class="announcementGridcontainer">
+            <h3>Announcements</h3>
+            <div class="announcementGrid">
+                <div class="announcement">
+                    <h3>Site Maintenance</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis</p>
+                </div>
+                <div class="announcement">
+                    <h3>Updated Privacy Policy</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis</p>
+                </div>
+                <div class="announcement">
+                    <h3>Community Day</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis</p>
+                </div>
+            </div>
     </div>
-    <div>
-        <article>
-            <h3>TEST</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis, in voluptas ipsam rem nobis odio nam tempora obcaecati aut sunt incidunt nisi praesentium eaque porro autem accusantium dolor sit cumque.</p>
-            <img src="./icons/star-plus-outline.svg" alt="star" class="icons">
-            <img src="./icons/eye-plus-outline.svg" alt="viewed" class="icons">
-            <img src="./icons/open-in-new.svg" alt="open in new" class="icons">
-        </article>
+    <div class="trendingGrid">
+        <h3>Trending</h3>
+            <div class="trendingContents">
+                <div class="mediaBox">
+                    <img src="./icons/pfp.png" alt="pfp" class="userImage">
+                    <div class="profileName">
+                        <h2>@morgan</h2>
+                        <p>Racism Pro</p>
+                    </div>
+                </div>
+                <div class="mediaBox">
+                    <img src="./icons/pfp.png" alt="pfp" class="userImage">
+                    <div class="profileName">
+                        <h2>@jennie</h2>
+                        <p>Burger</p>
+                    </div>
+                </div>
+                <div class="mediaBox">
+                    <img src="./icons/pfp.png" alt="pfp" class="userImage">
+                    <div class="profileName">
+                        <h2>@sylvia</h2>
+                        <p>Solve World hunger</p>
+                    </div>
+                </div>
+                <div class="mediaBox">
+                    <img src="./icons/pfp.png" alt="pfp" class="userImage">
+                    <div class="profileName">
+                        <h2>@jason</h2>
+                        <p>Super Fun App</A>pp</p>
+                   </div>
+                </div>
+            </div>
     </div>
 </body>
 </html>
